src/test/ui/consts/const-eval/const-eval-overflow2.stderr
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:14:6
   |
LL | const VALS_I8: (i8,) =
   | --------------------
LL |     (
LL |      i8::MIN - 1,
   |      ^^^^^^^^^^^ attempt to compute `i8::MIN - 1_i8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:21:6
   |
LL | const VALS_I16: (i16,) =
   | ----------------------
LL |     (
LL |      i16::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `i16::MIN - 1_i16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:28:6
   |
LL | const VALS_I32: (i32,) =
   | ----------------------
LL |     (
LL |      i32::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `i32::MIN - 1_i32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:35:6
   |
LL | const VALS_I64: (i64,) =
   | ----------------------
LL |     (
LL |      i64::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `i64::MIN - 1_i64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:42:6
   |
LL | const VALS_U8: (u8,) =
   | --------------------
LL |     (
LL |      u8::MIN - 1,
   |      ^^^^^^^^^^^ attempt to compute `0_u8 - 1_u8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:48:6
   |
LL | const VALS_U16: (u16,) = (
   | ----------------------
LL |      u16::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `0_u16 - 1_u16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:54:6
   |
LL | const VALS_U32: (u32,) = (
   | ----------------------
LL |      u32::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `0_u32 - 1_u32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:61:6
   |
LL | const VALS_U64: (u64,) =
   | ----------------------
LL |     (
LL |      u64::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `0_u64 - 1_u64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 8 previous errors

Future incompatibility report: Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:14:6
   |
LL | const VALS_I8: (i8,) =
   | --------------------
LL |     (
LL |      i8::MIN - 1,
   |      ^^^^^^^^^^^ attempt to compute `i8::MIN - 1_i8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:21:6
   |
LL | const VALS_I16: (i16,) =
   | ----------------------
LL |     (
LL |      i16::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `i16::MIN - 1_i16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:28:6
   |
LL | const VALS_I32: (i32,) =
   | ----------------------
LL |     (
LL |      i32::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `i32::MIN - 1_i32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:35:6
   |
LL | const VALS_I64: (i64,) =
   | ----------------------
LL |     (
LL |      i64::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `i64::MIN - 1_i64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:42:6
   |
LL | const VALS_U8: (u8,) =
   | --------------------
LL |     (
LL |      u8::MIN - 1,
   |      ^^^^^^^^^^^ attempt to compute `0_u8 - 1_u8`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:48:6
   |
LL | const VALS_U16: (u16,) = (
   | ----------------------
LL |      u16::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `0_u16 - 1_u16`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:54:6
   |
LL | const VALS_U32: (u32,) = (
   | ----------------------
LL |      u32::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `0_u32 - 1_u32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-eval-overflow2.rs:61:6
   |
LL | const VALS_U64: (u64,) =
   | ----------------------
LL |     (
LL |      u64::MIN - 1,
   |      ^^^^^^^^^^^^ attempt to compute `0_u64 - 1_u64`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow2.rs:8:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

